--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "debug": "~2.2.0",
     "express": "~4.14.0",
     "hbs": "~4.0.1",
+    "mongoose": "^4.7.7",
     "morgan": "~1.7.0"
   }
 }
